--- a/paragraph practice/style.css
+++ b/paragraph practice/style.css
@@ -1,20 +1,25 @@
-#h1 {
+h1 {
     color: lightblue;
-    background-color: grey;
+   
+    font-family: serif;
    }
   
-  .h2 {
+  h2 {
     color: lightblue;
     background-color: grey;
       
   } 
   .blue {
       color: lightblue;
-      text-indent: 10px;
+      text-indent: 20px;
   }
   
   #red {
       color: red;
+  }
+  
+  p {
+      line-height: 7px;
   }
       
   
